# zloutek-bot

./: .gitignore  .pre-commit-config.yaml  bot_data.db  pyproject.toml
src/bot/: main.py
src/bot/adapters/database/: database.py  starboard.py
src/bot/adapters/discord/: utils.py
src/bot/adapters/discord/cogs/: admin.py  starboard.py  welcome.py
src/bot/core/: bot.py  database.py  logging.py  settings.py  typing.py
src/bot/core/adapters/discord/: errors.py  utils.py
src/bot/features/starboard/: models.py  repositories.py  services.py
src/bot/features/welcome/: entities.py  services.py
src/bot/starboard/: __init__.py
src/bot/starboard/adapters/database/: repository.py
src/bot/starboard/adapters/discord/: cog.py  mappers.py  presenter.py  publisher.py
src/bot/starboard/application/: ports.py  services.py
src/bot/starboard/domain/: models.py
