[project]
name = "bot"
version = "0.1.0"
description = ""
authors = [
    {name = "Tomáš Ljutenko",email = "tomas.ljutenko@gmail.com"}
]
readme = "README.md"
requires-python = ">=3.12"


[tool.poetry.dependencies]
discord-py = "^2.5.2"
asyncpg = "^0.30.0"
sqlalchemy = {extras = ["asyncio"], version = "^2.0.41"}
python-dotenv = "^1.1.1"
pydantic = "^2.11.7"
pydantic-settings = "^2.10.1"
aiosqlite = "^0.21.0"
rich = "^14.0.0"


[tool.poetry.group.dev.dependencies]
mypy = "^1.16.1"
pytest = "^8.4.1"
ruff = "^0.12.2"
black = "^25.1.0"
bandit = "^1.8.6"
pre-commit = "^4.2.0"

[tool.black]
line-length = 120

[tool.ruff]
line-length = 120
lint.select = ["E", "F", "W", "I", "N", "UP", "B", "A", "C4"]
lint.ignore = []

[tool.mypy]
plugins = ['pydantic.mypy']
mypy_path = "src"
follow_imports = "silent"
warn_redundant_casts = true
warn_unused_ignores = true
disallow_any_generics = true
no_implicit_reexport = true
disallow_untyped_defs = true

[tool.pydantic-mypy]
init_forbid_extra = true
init_typed = true
warn_required_dynamic_aliases = true

[tool.pytest.ini_options]
pythonpath = ["src"]
testpaths = ["tests"]

[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
